# simple-vote-tutorial

./: .gitignore  README-installation-notes.md  README.md  cheat.txt  log_docker  package-lock.json  package.json  start_docker  start_docker_normal  stop_docker  update_docker
env/: cluster-testnet4XW.env
src/: Cargo.toml  do.sh
src/client/: airdrop.js  balance.js  ckrent_rejectdups.js  count_rejectdups.js  demo_caws.js  deploy.js  deploy_rejectdups.js  deploy_simplest.js  dump.js  election_simplest.js  keypair.js  nodeConnection.js  ourAccount.js  slot.js  storeConfig.js  vote_rejectdups.js  vote_simplest.js
src/client/util/: air-drop.js  send-and-confirm-transaction-catch.js
src/frontend-final/: index.html  solana-web3.js
src/frontend-simplest/: index.html
src/frontend-vote/: index.html  index2.html  server.js
src/frontend-wallet/: index.html
src/rejectdups-rust/: Cargo.toml  README.md  do.sh
src/rejectdups-rust/src/: lib.rs
src/simplest-rust/: Cargo.toml  README.md  do.sh
src/simplest-rust/src/: lib.rs
src/solana-web3.js/lib/: index.cjs.js  index.cjs.js.map  index.esm.js  index.esm.js.map  index.iife.js  index.iife.js.map
