
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-simplest"
version = "0.0.1"
description = "Example template program written in Rust"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.1"
byteorder = "1.3"
remove_dir_all = "=0.5.0"

[dev-dependencies]
solana-program-test = "=1.6.1"
solana-sdk = "=1.6.1"

[lib]
name = "solana_bpf_simplest"
crate-type = ["cdylib", "lib"]

